--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freeze-Frame with StaticNeRF: Uncertainty-Guided NeRF Map Reconstruction in Dynamic Scenes</title>
     <meta name="description" content="StaticNeRF paper. Official web with qualitative comparisons, links to the source code, and additional materials.">
@@ -24,7 +24,7 @@
       </h1>
     </header>
 
-    <div class="authors">
+    <!-- <div class="authors">
         <div class="author">
           <span class="author-name">
             <a href="https://jkulhanek.github.io/">Juhui Lee</a>
@@ -56,7 +56,7 @@
           <span class="author-affiliation">INHA University</span>
           <span class="author-email"><a href="mailto:younggun@example.com">yg.cho@inha.ac.kr</a></span>
         </div>
-    </div>
+    </div> -->
 
     <div class="links">
         <a class="button" href="https://arxiv.org/pdf/2407.08447"><i class="ti ti-file-type-pdf"></i> Paper</a>
@@ -344,7 +344,7 @@
           </div>
       </section>
 
-    <section>
+    <!-- <section>
       <h2>Acknowledgements</h2>
       <p class="justify">
         We would like to thank Weining Ren for his help with the NeRF On-the-go dataset and code and Tobias Fischer and Xi Wang for fruitful discussions.
@@ -364,8 +364,8 @@
   journal={NeurIPS},
   year={2024}
 }</code></pre>
-    </section>
+    </section> -->
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
