--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <a class="button" href="https://arxiv.org/pdf/2407.08447"><i class="ti ti-file-type-pdf"></i> Supplementary Materials</a> -->
         <a class="button" href=""><i class="ti ti-file-type-pdf"></i>Paper</a>
         <a class="button" href=""><i class="ti ti-brand-github-filled"></i>Code</a>
-        <a class="button" href="./assets/video/StaticNeRF.mp4"><i class="ti ti-slideshow"></i>Video</a>
-        <a class="button" href="./assets/supp/StaticNeRF_Supplementary_Material.pdf" target="_blank"><i class="ti ti-file-type-pdf"></i>Supplementary Material</a>
+        <a class="button" href="./assets/video/RAL 2025 anonymous.mp4"><i class="ti ti-slideshow"></i>Video</a>
+        <a class="button" href="./assets/supp/ral2025_staticnerf_anonymous.pdf" target="_blank"><i class="ti ti-file-type-pdf"></i>Supplementary Material</a>
       </div>
       <style>
         .video.teaser-video::before {
@@ -171,7 +171,7 @@
             <div style="display: flex; justify-content: center; gap: 10px; max-width: 960px; margin: auto;">
               <div style="position: relative; width: 320px; aspect-ratio: 640/480;">
                 <video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
-                  <source src="./assets/thumb/gt_JH_2_s_1.mp4" type="video/mp4">
+                  <source src="./assets/thumb/anony/gt_JH_2_s_1.mp4" type="video/mp4">
                 </video>
                 <div style="position: absolute; top: 12px; left: 50%;
                             transform: translateX(-50%); color: white;
@@ -192,7 +192,8 @@
               </div>
               <div style="position: relative; width: 320px; aspect-ratio: 640/480;">
                 <video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
-                  <source src="./assets/thumb/others_JH_2_s_1.mp4" type="video/mp4">
+                  <!-- <source src="./assets/thumb/others_JH_2_s_1.mp4" type="video/mp4"> -->\
+                  <source src="./assets/thumb/anony/others_JH_2_s_1.mp4" type="video/mp4">
                 </video>
                 <div style="position: absolute; top: 12px; left: 50%;
                             transform: translateX(-50%); color: white;
@@ -244,7 +245,7 @@
         <figure>
           <div class="video-wrapper">
             <video class="video-compare" style="aspect-ratio: 640/480" loop muted>
-              <source src="./assets/on-the-go/final_JH_2_s_1.mp4" type="video/mp4">
+              <source src="./assets/on-the-go/anony/final_JH_2_s_1.mp4" type="video/mp4">
             </video>
             <span class="video-label"><span>Ours</span><span>NeRF On-the-go</span></span>
           </div>
@@ -278,7 +279,7 @@
         <figure>
           <div class="video-wrapper">
             <video class="video-compare" style="aspect-ratio: 640/480" loop muted>
-              <source src="./assets/final_H3_6_s_3.mp4" type="video/mp4">
+              <source src="./assets/anony/final_H3_6_s_3.mp4" type="video/mp4">
             </video>
             <span class="video-label"><span>Input</span><span>Ours</span></span>
           </div>
