--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <a class="button" href="https://github.com/jkulhanek/wild-gaussians/"><i class="ti ti-brand-github-filled"></i> Code</a>
         <a class="button" href="https://youtu.be/Ri-er40QUoU"><i class="ti ti-slideshow"></i> Video</a>
         <a class="button" href="https://arxiv.org/pdf/2407.08447"><i class="ti ti-file-type-pdf"></i> Supplementary Materials</a> -->
-        <a class="button" href=""><i class="ti ti-file-type-pdf"></i>Paper</a>
-        <a class="button" href=""><i class="ti ti-brand-github-filled"></i>Code</a>
+        <!-- <a class="button" href=""><i class="ti ti-file-type-pdf"></i>Paper</a>
+        <a class="button" href=""><i class="ti ti-brand-github-filled"></i>Code</a> -->
         <a class="button" href="./assets/video/RAL 2025 anonymous.mp4"><i class="ti ti-slideshow"></i>Video</a>
         <a class="button" href="./assets/supp/ral2025_staticnerf_anonymous.pdf" target="_blank"><i class="ti ti-file-type-pdf"></i>Supplementary Material</a>
       </div>
@@ -220,7 +220,7 @@
     <section>
       <h2>Static Neural Representation</h2>
       <p class="justify" style="margin-top: 20px; margin-bottom: -10px;">
-        We compare our method against baseline methods and demonstrate that our approach reliably removes dynamic objects while maintaining high rendering quality.
+        We compared our method against baseline methods and demonstrated that our approach reliably removes dynamic objects while maintaining high rendering quality.
       </p>
       
       <div class="video-grid-3col">
@@ -254,7 +254,7 @@
 
 
       <p class="justify" style="margin-top: -10px; margin-bottom: -10px;">
-        In addition, we observe that our method performs consistently well across a variety of datasets.
+        In addition, we observed that our method performs consistently well across a variety of datasets.
       </p>
 
       <div class="video-grid-3col">
@@ -287,8 +287,8 @@
       </div>
 
         <p class="justify" style="margin-top: -10px; margin-bottom: 8px;">
-            We simulate low-light environments through pixel scaling during preprocessing, and train an appearance embedding to capture illumination variations. 
-            Based on this design, we demonstrate that our method achieves robust dynamic object removal even under diverse lighting conditions.
+            We simulated low-light environments through pixel scaling during preprocessing, and trained an appearance embedding to capture illumination variations. 
+            Based on this design, we demonstrated that our method achieves robust dynamic object removal even under diverse lighting conditions.
         </p>
         
         <div style="display: flex; justify-content: center; gap: 10px;">
